Fix z-index pop-up issue

--- a/src/components/Global/Map/styles.scss
+++ b/src/components/Global/Map/styles.scss
@@ -105,6 +105,7 @@
           }
 
           .mapboxgl-popup {
+            z-index: 3;
             transform: none !important;
           }
 
